<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/gray_light"
    android:layout_height="match_parent">
    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/register_img"
        android:layout_marginTop="117dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:src="@drawable/logo"
        android:layout_height="56dp"
        />

    <EditText
        android:id="@+id/register_phone"
        android:layout_below="@id/register_img"
        android:layout_marginTop="22dp"
        android:background="#ffffff"
        android:hint="@string/phone_number"
        android:paddingLeft="35dp"
        android:inputType="number"
        android:textColor="@color/dark_normal"
        android:textColorHint="@color/gray_normal"
        android:layout_width="match_parent"
        android:layout_height="55dp" />
    <TextView
        android:id="@+id/tv_line"
        android:layout_below="@id/register_phone"
        android:background="@color/gray_normal"
        android:layout_width="match_parent"
        android:layout_height="1px" />
    <EditText
        android:id="@+id/register_password"
        android:layout_below="@id/tv_line"
        android:background="#ffffff"
        android:hint="@string/input_password"
        android:paddingLeft="35dp"
        android:inputType="textPassword"
        android:textColor="@color/dark_normal"
        android:textColorHint="@color/gray_normal"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_below="@id/register_password"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:textSize="24sp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <TextView
        android:id="@+id/register_to_login"
        android:layout_alignRight="@id/register_btn"
        android:layout_below="@id/register_btn"
        android:textColor="@color/dark_normal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>